[package]
name = "vitess-grpc-test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vitess-grpc = { path = "../vitess-grpc" }

anyhow = "1.0"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.5", features = ["full"] }
mysql = "24.0"

# For min-versions testing
openssl-sys = "0.9.88"
